# Ride-The-Duck

./: .gitignore  README.md  SaveFile_RideTheDuck.json  color_demo.py  game.py  gameMacOS.py  gameWindows  mainGame.py  pyproject.toml  savefile.json
.github/workflows/: publish-to-pypi.yml
Ride-The-Duck/: __init__.py  mainGame.py
ride_the_duck/: _version.py
