[metadata]
name = "ride_the_duck"
version = "0.1.0"
description = "A Python package for riding ducks."
author = "Your Name"
author_email = "yourname@example.com"
url = "https://github.com/yourusername/ride_the_duck"
license = "MIT"

[options]
packages = find:
install_requires =
    requests
    beautifulsoup4

[options.packages.find]
where = ["."]
include = ["ride_the_duck*"]
exclude = ["tests*"]